src/components/Mouse/index.module.scss
.wrapper {
  position: absolute;
  width: 24px;
  height: 24px;
  transform: translate(-50%, -50%);
  z-index: 12;

  &::before {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    filter: blur(3px);
    border-radius: 50%;
    background-color: hsla(176, 100%, 50%, 1);
    background-image: radial-gradient(
        at 40% 20%,
        hsla(28, 100%, 74%, 1) 0px,
        transparent 50%
      ),
      radial-gradient(at 80% 0%, hsla(189, 100%, 56%, 1) 0px, transparent 50%),
      radial-gradient(at 0% 50%, hsla(355, 100%, 93%, 1) 0px, transparent 50%),
      radial-gradient(at 80% 50%, hsla(340, 100%, 76%, 1) 0px, transparent 50%),
      radial-gradient(at 0% 100%, hsla(22, 100%, 77%, 1) 0px, transparent 50%),
      radial-gradient(at 80% 100%, hsla(242, 100%, 70%, 1) 0px, transparent 50%),
      radial-gradient(at 0% 0%, hsla(343, 100%, 76%, 1) 0px, transparent 50%);
    opacity: 0.6;
  }

  &::after {
    content: attr(data-name);
    position: absolute;
    bottom: -8px;
    left: 18px;
    font-size: 12px;
    font-weight: 600;
    color: #fff;
    transition: opacity 0.3s ease-in-out;
    user-select: none;
    opacity: 0;
    z-index: 1;
  }

  &:hover::after {
    opacity: 0.6;
  }
}

